0.12
 - Add Work object.
 - Add title to Object example in doc.

0.11 2025-03-27T16:49:28+01:00
 - Add 'external_ids' parameter to Publisher object.
 - Add tests for 'cycles' parameter.

0.10 2025-03-17T18:19:08+01:00
 - Add 'valid' parameter to ISBN object.
 - Update copyright years.

0.09 2024-11-25T17:22:53+01:00
 - API change: Add 'issn' parameter to Series.
 - Regen README file.

0.08 2024-11-04T21:20:17+01:00
 - API change: Add 'cycles' parameter to Object.
 - Regen examples.

0.07 2024-10-30T22:17:14+01:00
 - API change: Add 'collective' parameter to ISBN.
 - API change: Add 'precision' parameter to PublicationDate.

0.06 2024-07-08T17:33:38+02:00
 - API change: Add full_name() method to People.
 - API change: Remove ccnb() and oclc() methods in Object.
 - API change: Remove nkcr_aut() method from People.
 - Add PublicationDate object.

0.05 2024-07-04T21:29:18+02:00
 - API change: Add 'external_ids' parameter to Object object.
 - API change: Add 'external_ids' parameter to People object.
 - Add ExternalId object.
 - Deprecation of ccnb() and oclc() methods in Object object.
 - Deprecation of nkcr_aut() method in People object.

0.04 2024-06-25T19:56:28+02:00
 - API change: Add id parameter to Publisher object.
 - API change: Add work_period_start and work_period_end getter methods to
   MARC::Convert::Wikidata::Object::People class
 - API change: Rewrite publisher parameter in Series to Publisher object.
 - Add tests for People.
 - Add tests for Series.
 - Fix minimal versions of Mo::utils*.
 - Improve Series doc.
 - Update copyright years.

0.03 2023-11-14T15:21:19+01:00
 - Add doc for Kramerius object.
 - Add test for Kramerius url() method.
 - Move MARC::Convert::Wikidata::Object::Utils to Mo::utils::Date.

0.02 2023-11-13T00:00:03+01:00
 - Add "defaults => []" for 'compilers' parameter. Same as other.
 - Improve doc.

0.01 2023-05-26T09:58:59+02:00
 - First version.